[project]
name = "hilda"
description = "LLDB wrapped and empowered by iPython's features"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
keywords = ["python", "debugger", "lldb", "ipython", "ios", "debug"]
authors = [
    { name = "doronz88", email = "doron88@gmail.com" },
    { name = "matan", email = "matan1008@gmail.com" },
    { name = "netanel cohen", email = "netanelc305@protonmail.com" }
]
maintainers = [
    { name = "doronz88", email = "doron88@gmail.com" },
    { name = "matan", email = "matan1008@gmail.com" },
    { name = "netanel cohen", email = "netanelc305@protonmail.com" }
]
classifiers = [
    "Operating System :: MacOS",
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
]
dynamic = ["dependencies", "version"]

[project.optional-dependencies]
test = ["pytest"]

[project.urls]
"Homepage" = "https://github.com/doronz88/hilda"
"Bug Reports" = "https://github.com/doronz88/hilda/issues"

[project.scripts]
hilda = "hilda.__main__:main"

[tool.setuptools]
package-data = { "hilda" = ["*.html", "*.m", "ui/*.json"] }

[tool.setuptools.packages.find]
exclude = ["docs*", "tests*"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
version = { attr = "hilda._version.__version__" }

[tool.setuptools_scm]
version_file = "hilda/_version.py"

[build-system]
requires = ["setuptools>=43.0.0", "setuptools_scm>=8", "wheel"]
build-backend = "setuptools.build_meta"
