[project]
name = "hilda"
description = "LLDB wrapped and empowered by iPython's features"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
keywords = ["python", "debugger", "lldb", "ipython", "ios", "debug"]
authors = [
    { name = "doronz88", email = "doron88@gmail.com" },
    { name = "matan", email = "matan1008@gmail.com" },
    { name = "netanel cohen", email = "netanelc305@protonmail.com" }
]
maintainers = [
    { name = "doronz88", email = "doron88@gmail.com" },
    { name = "matan", email = "matan1008@gmail.com" },
    { name = "netanel cohen", email = "netanelc305@protonmail.com" }
]
classifiers = [
    "Operating System :: MacOS",
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
]
dynamic = ["dependencies", "version"]

[project.optional-dependencies]
test = ["pytest"]

[project.urls]
"Homepage" = "https://github.com/doronz88/hilda"
"Bug Reports" = "https://github.com/doronz88/hilda/issues"

[project.scripts]
hilda = "hilda.__main__:main"

[tool.setuptools]
package-data = { "hilda" = ["*.html", "*.m", "ui/*.json"] }

[tool.setuptools.packages.find]
exclude = ["docs*", "tests*"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
version = { attr = "hilda._version.__version__" }

[tool.setuptools_scm]
version_file = "hilda/_version.py"

[build-system]
requires = ["setuptools>=43.0.0", "setuptools_scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py39"
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    # flake8-2020
    "YTT",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # pycodestyle
    "E",
    "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # Shadowing a built-in
    "A001",
    # LineTooLong
    "E501",
    # Custom error classes
    "TRY003",
    # Use `logging.exception` instead of `logging.error`
    "TRY400",
    # Abstract `raise` to an inner function
    "TRY301",
    # Do not perform function call `csfield` in dataclass defaults
    "RUF009",
    # Found useless attribute access. Either assign it to a variable or remove it.
    "B018"
]

[tool.ruff.format]
preview = true
