[metadata]
name = hilda
version = 0.0.1

[options]
packages = find:
install_requires =
    tqdm
    docstring_parser
    coloredlogs
    hexdump
    ipython
    click
    objc_types_decoder

[options.extras_require]
test = pytest

[options.entry_points]
console_scripts =
    hilda = hilda.__main__:main