[metadata]
name = hilda
version = 0.1.1
description = LLDB wrapped and empowered by iPython's features
long_description = file: README.md
long_description_content_type = text/markdown
author = DoronZ
classifiers =
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
url = https://github.com/doronz88/hilda
project_urls =
    hilda = https://github.com/doronz88/hilda

[options]
packages = find:
install_requires =
    tqdm
    docstring_parser
    coloredlogs
    hexdump
    ipython
    click
    objc_types_decoder
    construct
    pymobiledevice3
    cached-property
    keystone-engine

[options.package_data]
hilda =
    *.html
    *.m

[options.extras_require]
test = pytest

[options.entry_points]
console_scripts =
    hilda = hilda.__main__:main